package.json: changed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "stackbit-vanilla-theme",
+  "name": "ayum-personal-bumfstackbit-vanilla-theme",
   "description": "Stackbit Vanilla Theme",
   "version": "0.0.1",
   "license": "MIT",
